test/libyul/yulSyntaxTests/datasize_shadowing.yul
{
    function datasize(a) -> b {}
}
// ----
// ParserError 5568: (15-23='datasize'): Cannot use builtin function name "datasize" as identifier name.
